<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>otv_bf7</name>
  <version>1.0.3</version>
  <description>El kell jutni a startból a célba a teknőssel.</description>
  <maintainer email="attilaotvos8@g.com">he</maintainer>
  <license>No licence</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>keyboard</exec_depend>
 <build_depend>turtlesim</build_depend>
 <exec_depend>turtlesim</exec_depend>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
